--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,7 @@
   "proseWrap": "preserve",
   "requirePragma": false,
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "none",
   "useTabs": false
