--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-hot-loader": "^4.12.11",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
@@ -63,7 +64,8 @@
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.18.0"
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0"
   },
   "config": {
     "commitizen": {
