--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@storybook/addons": "^5.1.10",
     "@storybook/react": "^5.1.10",
     "@testing-library/react": "^9.1.0",
+    "axios-mock-adapter": "^1.17.0",
     "babel-loader": "^8.0.6",
     "cz-conventional-changelog": "^3.0.2",
     "lint-staged": "^9.2.1",
