--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/pagination": "^12.0.9",
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "react": "^16.9.0",
