--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "tslint src",
+    "prettier": "./node_modules/.bin/prettier  \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx|graphql|vue)\"",
+    "format": "npm run prettier -- --write",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
