--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "tslint src",
     "prettier": "./node_modules/.bin/prettier  \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|mdx|graphql|vue)\"",
     "format": "npm run prettier -- --write",
+    "validate-staged": "lint-staged",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -47,14 +48,19 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run validate-staged"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@primer/components": "^13.3.0",
     "@storybook/addon-actions": "^5.1.10",
     "@storybook/addon-links": "^5.1.10",
     "@storybook/addons": "^5.1.10",
     "@storybook/react": "^5.1.10",
     "@testing-library/react": "^9.1.0",
-    "@primer/components": "^13.3.0",
     "@types/axios": "^0.14.0",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
@@ -68,6 +74,7 @@
     "axios-mock-adapter": "^1.17.0",
     "babel-loader": "^8.0.6",
     "cz-conventional-changelog": "^3.0.2",
+    "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
