--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-toastify": "^5.3.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
