refactor(Home) reduxify search list

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,6 @@
 {
-  "**/*.+(js|jsx)": [
-    "eslint --fix",
+  "**/*.+(ts|tsx)": [
+    "tslint --fix",
     "prettier --write",
     "git add"
   ],
